--- a/StockPrediction.ipynb
+++ b/StockPrediction.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIQ94tZM8e8+pmFYFyNIxM",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMoA5yDvTqQ5JR5fI85k07Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "VuJ_x_R0INZ0"
       },
@@ -65,9 +67,9 @@
           "height": 255
         },
         "id": "oqMhioPiIoYF",
-        "outputId": "a90c7509-c147-406d-f8a7-2f133e0c9a56"
+        "outputId": "507efc96-4009-468a-b107-1d30282cd9bb"
       },
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,11 +84,11 @@
             "text/plain": [
               "                  Open        High         Low       Close   Adj Close  \\\n",
               "Date                                                                     \n",
-              "2021-12-01  118.250000  118.930000  116.849998  116.919998  106.124680   \n",
-              "2021-12-02  117.370003  117.980003  116.559998  116.900002  106.106529   \n",
-              "2021-12-03  117.360001  119.360001  117.360001  118.839996  107.867416   \n",
+              "2021-12-01  118.250000  118.930000  116.849998  116.919998  106.124687   \n",
+              "2021-12-02  117.370003  117.980003  116.559998  116.900002  106.106544   \n",
+              "2021-12-03  117.360001  119.360001  117.360001  118.839996  107.867409   \n",
               "2021-12-06  119.400002  121.150002  119.400002  119.910004  108.838631   \n",
-              "2021-12-07  120.480003  122.080002  120.070000  121.580002  110.354416   \n",
+              "2021-12-07  120.480003  122.080002  120.070000  121.580002  110.354439   \n",
               "\n",
               "             Volume  \n",
               "Date                 \n",
@@ -98,7 +100,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-24dfef84-c8d0-4a5c-b349-2619fbe172db\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b3f291d9-7fda-48ad-8785-92640aff01f8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -141,7 +143,7 @@
               "      <td>118.930000</td>\n",
               "      <td>116.849998</td>\n",
               "      <td>116.919998</td>\n",
-              "      <td>106.124680</td>\n",
+              "      <td>106.124687</td>\n",
               "      <td>5958300</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -150,7 +152,7 @@
               "      <td>117.980003</td>\n",
               "      <td>116.559998</td>\n",
               "      <td>116.900002</td>\n",
-              "      <td>106.106529</td>\n",
+              "      <td>106.106544</td>\n",
               "      <td>5267100</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -159,7 +161,7 @@
               "      <td>119.360001</td>\n",
               "      <td>117.360001</td>\n",
               "      <td>118.839996</td>\n",
-              "      <td>107.867416</td>\n",
+              "      <td>107.867409</td>\n",
               "      <td>6630100</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -177,7 +179,7 @@
               "      <td>122.080002</td>\n",
               "      <td>120.070000</td>\n",
               "      <td>121.580002</td>\n",
-              "      <td>110.354416</td>\n",
+              "      <td>110.354439</td>\n",
               "      <td>5194000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -186,7 +188,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-24dfef84-c8d0-4a5c-b349-2619fbe172db')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3f291d9-7fda-48ad-8785-92640aff01f8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -238,12 +240,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-24dfef84-c8d0-4a5c-b349-2619fbe172db button.colab-df-convert');\n",
+              "        document.querySelector('#df-b3f291d9-7fda-48ad-8785-92640aff01f8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-24dfef84-c8d0-4a5c-b349-2619fbe172db');\n",
+              "        const element = document.querySelector('#df-b3f291d9-7fda-48ad-8785-92640aff01f8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -263,8 +265,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-29933539-b9c9-4446-9f7c-b2fd3e24d5a5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-29933539-b9c9-4446-9f7c-b2fd3e24d5a5')\"\n",
+              "<div id=\"df-4b9135ee-f144-4de8-a4b5-748edc073b38\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4b9135ee-f144-4de8-a4b5-748edc073b38')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -383,7 +385,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-29933539-b9c9-4446-9f7c-b2fd3e24d5a5 button');\n",
+              "        document.querySelector('#df-4b9135ee-f144-4de8-a4b5-748edc073b38 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -394,7 +396,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 2
         }
       ]
     },
@@ -407,7 +409,7 @@
       "metadata": {
         "id": "8ehmfCgaMF52"
       },
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -435,7 +437,7 @@
       "metadata": {
         "id": "mA4vhBwSJNFM"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -452,7 +454,7 @@
       "metadata": {
         "id": "BzE5qz6cLqqa"
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -460,72 +462,132 @@
       "source": [
         "# compiles the model\n",
         "model.compile(optimizer='adam', loss='mean_squared_error', metrics = ['accuracy'])\n",
-        "model.fit(train_generator, epochs=20)"
+        "model.fit(train_generator, epochs=50)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I4GqSzu1OFWN",
-        "outputId": "c27567ce-cfdf-4de7-abee-0f63660624a5"
+        "outputId": "1d933c0b-e7e6-410c-d002-b4b6c08b60a0"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/20\n",
-            "17/17 [==============================] - 8s 66ms/step - loss: 0.9844\n",
-            "Epoch 2/20\n",
-            "17/17 [==============================] - 1s 66ms/step - loss: 0.4773\n",
-            "Epoch 3/20\n",
-            "17/17 [==============================] - 1s 68ms/step - loss: 0.3555\n",
-            "Epoch 4/20\n",
-            "17/17 [==============================] - 1s 65ms/step - loss: 0.2965\n",
-            "Epoch 5/20\n",
-            "17/17 [==============================] - 1s 66ms/step - loss: 0.2639\n",
-            "Epoch 6/20\n",
-            "17/17 [==============================] - 1s 66ms/step - loss: 0.2478\n",
-            "Epoch 7/20\n",
-            "17/17 [==============================] - 1s 66ms/step - loss: 0.2444\n",
-            "Epoch 8/20\n",
-            "17/17 [==============================] - 1s 83ms/step - loss: 0.2379\n",
-            "Epoch 9/20\n",
-            "17/17 [==============================] - 2s 105ms/step - loss: 0.2431\n",
-            "Epoch 10/20\n",
-            "17/17 [==============================] - 2s 101ms/step - loss: 0.2230\n",
-            "Epoch 11/20\n",
-            "17/17 [==============================] - 1s 67ms/step - loss: 0.2026\n",
-            "Epoch 12/20\n",
-            "17/17 [==============================] - 1s 67ms/step - loss: 0.1964\n",
-            "Epoch 13/20\n",
-            "17/17 [==============================] - 1s 66ms/step - loss: 0.1789\n",
-            "Epoch 14/20\n",
-            "17/17 [==============================] - 1s 65ms/step - loss: 0.1749\n",
-            "Epoch 15/20\n",
-            "17/17 [==============================] - 1s 67ms/step - loss: 0.1641\n",
-            "Epoch 16/20\n",
-            "17/17 [==============================] - 1s 65ms/step - loss: 0.1541\n",
-            "Epoch 17/20\n",
-            "17/17 [==============================] - 1s 66ms/step - loss: 0.1495\n",
-            "Epoch 18/20\n",
-            "17/17 [==============================] - 1s 67ms/step - loss: 0.1516\n",
-            "Epoch 19/20\n",
-            "17/17 [==============================] - 2s 93ms/step - loss: 0.1549\n",
-            "Epoch 20/20\n",
-            "17/17 [==============================] - 2s 99ms/step - loss: 0.1573\n"
+            "Epoch 1/50\n",
+            "17/17 [==============================] - 12s 13ms/step - loss: 0.4995 - accuracy: 0.0000e+00\n",
+            "Epoch 2/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.3683 - accuracy: 0.0000e+00\n",
+            "Epoch 3/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.2795 - accuracy: 0.0000e+00\n",
+            "Epoch 4/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.2457 - accuracy: 0.0000e+00\n",
+            "Epoch 5/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.2329 - accuracy: 0.0000e+00\n",
+            "Epoch 6/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.2077 - accuracy: 0.0000e+00\n",
+            "Epoch 7/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.2065 - accuracy: 0.0000e+00\n",
+            "Epoch 8/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1994 - accuracy: 0.0000e+00\n",
+            "Epoch 9/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1852 - accuracy: 0.0000e+00\n",
+            "Epoch 10/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1971 - accuracy: 0.0000e+00\n",
+            "Epoch 11/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1808 - accuracy: 0.0000e+00\n",
+            "Epoch 12/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1362 - accuracy: 0.0000e+00\n",
+            "Epoch 13/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1376 - accuracy: 0.0000e+00\n",
+            "Epoch 14/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1157 - accuracy: 0.0000e+00\n",
+            "Epoch 15/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1116 - accuracy: 0.0000e+00\n",
+            "Epoch 16/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1104 - accuracy: 0.0000e+00\n",
+            "Epoch 17/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1112 - accuracy: 0.0000e+00\n",
+            "Epoch 18/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1057 - accuracy: 0.0000e+00\n",
+            "Epoch 19/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1039 - accuracy: 0.0000e+00\n",
+            "Epoch 20/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1419 - accuracy: 0.0000e+00\n",
+            "Epoch 21/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.1086 - accuracy: 0.0000e+00\n",
+            "Epoch 22/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1317 - accuracy: 0.0000e+00\n",
+            "Epoch 23/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1767 - accuracy: 0.0000e+00\n",
+            "Epoch 24/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.1183 - accuracy: 0.0000e+00\n",
+            "Epoch 25/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0969 - accuracy: 0.0000e+00\n",
+            "Epoch 26/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.0937 - accuracy: 0.0000e+00\n",
+            "Epoch 27/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.0949 - accuracy: 0.0000e+00\n",
+            "Epoch 28/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.0902 - accuracy: 0.0000e+00\n",
+            "Epoch 29/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0828 - accuracy: 0.0000e+00\n",
+            "Epoch 30/50\n",
+            "17/17 [==============================] - 0s 12ms/step - loss: 0.0794 - accuracy: 0.0000e+00\n",
+            "Epoch 31/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0787 - accuracy: 0.0000e+00\n",
+            "Epoch 32/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.0745 - accuracy: 0.0000e+00\n",
+            "Epoch 33/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.0769 - accuracy: 0.0000e+00\n",
+            "Epoch 34/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0714 - accuracy: 0.0000e+00\n",
+            "Epoch 35/50\n",
+            "17/17 [==============================] - 0s 10ms/step - loss: 0.0675 - accuracy: 0.0000e+00\n",
+            "Epoch 36/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0654 - accuracy: 0.0000e+00\n",
+            "Epoch 37/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0693 - accuracy: 0.0000e+00\n",
+            "Epoch 38/50\n",
+            "17/17 [==============================] - 0s 11ms/step - loss: 0.0606 - accuracy: 0.0000e+00\n",
+            "Epoch 39/50\n",
+            "17/17 [==============================] - 0s 15ms/step - loss: 0.0568 - accuracy: 0.0000e+00\n",
+            "Epoch 40/50\n",
+            "17/17 [==============================] - 0s 13ms/step - loss: 0.0509 - accuracy: 0.0000e+00\n",
+            "Epoch 41/50\n",
+            "17/17 [==============================] - 0s 15ms/step - loss: 0.0548 - accuracy: 0.0000e+00\n",
+            "Epoch 42/50\n",
+            "17/17 [==============================] - 0s 15ms/step - loss: 0.0560 - accuracy: 0.0000e+00\n",
+            "Epoch 43/50\n",
+            "17/17 [==============================] - 0s 14ms/step - loss: 0.0579 - accuracy: 0.0000e+00\n",
+            "Epoch 44/50\n",
+            "17/17 [==============================] - 0s 15ms/step - loss: 0.0563 - accuracy: 0.0000e+00\n",
+            "Epoch 45/50\n",
+            "17/17 [==============================] - 0s 14ms/step - loss: 0.0500 - accuracy: 0.0000e+00\n",
+            "Epoch 46/50\n",
+            "17/17 [==============================] - 0s 14ms/step - loss: 0.0610 - accuracy: 0.0000e+00\n",
+            "Epoch 47/50\n",
+            "17/17 [==============================] - 0s 15ms/step - loss: 0.0554 - accuracy: 0.0000e+00\n",
+            "Epoch 48/50\n",
+            "17/17 [==============================] - 0s 13ms/step - loss: 0.0498 - accuracy: 0.0000e+00\n",
+            "Epoch 49/50\n",
+            "17/17 [==============================] - 0s 14ms/step - loss: 0.0510 - accuracy: 0.0000e+00\n",
+            "Epoch 50/50\n",
+            "17/17 [==============================] - 0s 15ms/step - loss: 0.0516 - accuracy: 0.0000e+00\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7b59722cdf30>"
+              "<keras.src.callbacks.History at 0x7d6ef014f190>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 6
         }
       ]
     },
